style: 💄 add badge

--- a/doc/Photo_gallery/渐变过渡的相册.md
+++ b/doc/Photo_gallery/渐变过渡的相册.md
@@ -2,7 +2,8 @@
 
 相册是一个大家比较熟悉的场景，一般我们是实现的都是那种跑马灯式的轮播相册，这里异名给大家提供一个利用shader实现图片渐变过渡的相册思路
 
-![demo](./resources/demo.gif)
+
+![demo](http://cdn.blog.ifengzp.com/cocos-awesome/Photo_gallery/resources/demo.gif)
 
 # 实现思路
 
@@ -54,14 +55,10 @@ bgTramsform() {
 }
 ```
 
-![demo](./resources/demo.gif)
+![demo](http://cdn.blog.ifengzp.com/cocos-awesome/Photo_gallery/resources/demo.gif)
 
 ## 效果预览
 
 源码获取请点击**查看原文**，长按二维码查看效果👇
 
-![ewm](./resources/preview_ewm.png)
-
-
-
-
+![ewm](http://cdn.blog.ifengzp.com/cocos-awesome/Photo_gallery/resources/preview_ewm.png)
